# visual_sensors

./: CMakeLists.txt  package.xml
config/plates/: kinect2.yaml
launch/: kinect2.launch  primesense.launch  three_rgbd_plate.launch
launch/plates/: kinect_plate_generic.launch  kinect_plate_nwp3h.launch  structureio_plate_wnxt6.launch  xtion_plate_dk5iu.launch
param/: kinect2_plate_transform.yml  structureio_plate_transform.yml  xtion_plate_transform.yml
src/: three_rgbd_plate.py
