<?xml version="1.0"?>
<package>
  <name>visual_sensors</name>
  <version>0.0.1</version>
  <description>
    A package to setup visual sensors like RGBD and LIDAR with a uniform topic interface.
    Includes nodes that setup multiple sensors in various confiurations with transforms.
  </description>
  <maintainer email="c_dorwart@braincorporation.com">Adam Dorwart</maintainer>
  <license>Brain Corporation</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>kinect2_bridge</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>kinect2_bridge</run_depend>
  <run_depend>rospy</run_depend>
</package>